crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR0917_too_many_positional_arguments.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0917 Too many positional arguments (8 > 5)
 --> too_many_positional_arguments.py:1:5
  |
1 | def f(x, y, z, t, u, v, w, r):  # Too many positional arguments (8 > 5)
  |     ^
2 |     pass

PLR0917 Too many positional arguments (6 > 5)
  --> too_many_positional_arguments.py:21:5
   |
21 | def f(x, y, z, /, u, v, w):  # Too many positional arguments (6 > 5)
   |     ^
22 |     pass

PLR0917 Too many positional arguments (6 > 5)
  --> too_many_positional_arguments.py:29:5
   |
29 | def f(x, y, z, a, b, c, *, u, v, w):  # Too many positional arguments (6 > 5)
   |     ^
30 |     pass

PLR0917 Too many positional arguments (6 > 5)
  --> too_many_positional_arguments.py:43:9
   |
41 |         pass
42 |
43 |     def f(self, a, b, c, d, e, g):  # Too many positional arguments (6 > 5)
   |         ^
44 |         pass
help: Consider adding `@typing.override` if changing the function signature would violate the Liskov Substitution Principle

PLR0917 Too many positional arguments (6 > 5)
  --> too_many_positional_arguments.py:47:9
   |
46 |     @staticmethod
47 |     def f(self, a, b, c, d, e):  # Too many positional arguments (6 > 5)
   |         ^
48 |         pass
help: Consider adding `@typing.override` if changing the function signature would violate the Liskov Substitution Principle
