crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_0.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_0.py:1:1
  |
1 | exit(0)
  | ^^^^
2 | quit(0)
help: Replace `exit` with `sys.exit()`
  |
  - exit(0)
1 + import sys
2 + sys.exit(0)
3 | quit(0)
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_0.py:2:1
1 | exit(0)
2 | quit(0)
  | ^^^^
help: Replace `quit` with `sys.exit()`
  |
1 + import sys
2 | exit(0)
  - quit(0)
3 + sys.exit(0)
4 |
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_0.py:6:5
  |
5 | def main():
6 |     exit(2)
  |     ^^^^
7 |     quit(2)
help: Replace `exit` with `sys.exit()`
  |
1 + import sys
2 | exit(0)
--------------------------------------------------------------------------------
6 | def main():
  -     exit(2)
7 +     sys.exit(2)
8 |     quit(2)
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_0.py:7:5
5 | def main():
6 |     exit(2)
7 |     quit(2)
  |     ^^^^
help: Replace `quit` with `sys.exit()`
  |
1 + import sys
2 | exit(0)
--------------------------------------------------------------------------------
7 |     exit(2)
  -     quit(2)
8 +     sys.exit(2)
  |
note: This is an unsafe fix and may change runtime behavior
